--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ li, a, button {
 }
 
 .logo {
-  width: 75px;
+  width: 85px;
   cursor: pointer;
 }
 
@@ -29,14 +29,10 @@ li, a, button {
 	transition: all 0.5s ease 0s;
 }
 
-.nav__links li a:hover {
-	color: rgb(88, 101, 230);
-}
-
 button {
 	padding: 9px 25px;
-	background-color: rgb(88, 101, 230);
-	border: none;
+	border: #24252A;
+	border-radius: 25px;
 	font-size: 25px;
 	border-radius: 25px;
 	cursor: pointer;
@@ -44,7 +40,6 @@ button {
 }
 
 button:hover {
-	background-color: green;
 	transition: all 0.5s ease 0s;
 }
 
@@ -76,6 +71,22 @@ header {
 	color: #5865F2;
 }
 
+.title-nav {
+	color: #5865F2;
+}
+
+.title-nav:hover {
+	color: gray;
+}
+
+.github-nav:hover {
+	color: #5865F2;
+}
+
+.status-nav:hover {
+	color: #5865F2;
+}
+
 .footer {
 	position: fixed;
 	left: 50%;
@@ -88,4 +99,65 @@ header {
 	width: 100%;
 	justify-content: center;
 	text-align: center;
+}
+
+
+.glow-on-hover {
+    width: auto;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+}
+
+.glow-on-hover:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.glow-on-hover:active {
+    color: #000
+}
+
+.glow-on-hover:active:after {
+    background: transparent;
+}
+
+.glow-on-hover:hover:before {
+    opacity: 1;
+}
+
+.glow-on-hover:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
 }
